--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ws": "^8.18.0"
   },
   "devDependencies": {
+    "mock-socket": "^9.3.1",
     "prettier": "^3.4.2",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1"
