--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "main": "index.js",
   "scripts": {
     "test": "node --test",
-    "build": "esbuild src/holster.js --bundle --format=esm --sourcemap \"--external:node:*\" \"--external:ws\" --minify --outdir=build"
+    "build": "esbuild src/holster.js --bundle --format=esm --sourcemap \"--external:node:*\" \"--external:ws\" --minify --outdir=build",
+    "dev": "run-p --print-name --race dev:**",
+    "dev:server:esbuild": "npm run build -- --watch --servedir=.",
+    "dev:server:holster": "node src/index.js"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +21,7 @@
   "devDependencies": {
     "esbuild": "0.25.3",
     "mock-socket": "^9.3.1",
+    "npm-run-all": "^4.1.5",
     "prettier": "^3.4.2"
   },
   "prettier": {
