--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "holster",
+  "name": "@mblaney/holster",
   "version": "0.1.0",
-  "description": "",
+  "description": "Holster is a service that allows synchronising data between devices using Node, Deno, Bun or the browser.",
   "type": "module",
   "main": "index.js",
   "scripts": {
@@ -9,8 +9,8 @@
     "build": "esbuild src/holster.js --bundle --format=esm --sourcemap \"--external:node:*\" \"--external:ws\" --minify --outdir=build"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Malcolm Blaney",
+  "license": "Zlib OR MIT OR Apache-2.0",
   "dependencies": {
     "express": "^5.1.0",
     "fs": "^0.0.1-security",
@@ -28,5 +28,17 @@
   },
   "browser": {
     "fs": false
-  }
+  },
+  "directories": {
+    "example": "examples",
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mblaney/holster.git"
+  },
+  "bugs": {
+    "url": "https://github.com/mblaney/holster/issues"
+  },
+  "homepage": "https://github.com/mblaney/holster/wiki"
 }
