--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mblaney/holster",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Holster is a service that allows synchronising data between devices using Node, Deno, Bun or the browser.",
   "type": "module",
   "main": "index.js",
@@ -10,7 +10,7 @@
   },
   "keywords": [],
   "author": "Malcolm Blaney",
-  "license": "Zlib OR MIT OR Apache-2.0",
+  "license": "Zlib, MIT, Apache-2.0",
   "dependencies": {
     "express": "^5.1.0",
     "fs": "^0.0.1-security",
