feat: TypeScript conversion with Zod-first architecture
Complete TypeScript implementation of Holster graph database

## Overview
- 237/238 tests passing (99.6%)
- 100% type coverage, zero 'any' types
- Zod-first architecture with runtime validation
- Strict TypeScript settings enabled
- ~6,000 lines of type-safe code

## What's Included
### Source Code (ts/src/)
- holster.ts: Main API (get, put, on, off)
- user.ts: User authentication & management
- wire.ts: WebSocket message routing
- store.ts: Storage interface
- radisk.ts: Persistent radix tree with file splitting
- radix.ts: In-memory radix tree
- sea.ts: Security, Encryption, Authentication
- schemas.ts: Zod schemas (single source of truth)
- + 8 utility modules

### Test Suite (ts/test/)
- 17 module test files
- 9 system integration tests
- Mirrors JavaScript test structure
- 238 total tests

### Documentation
- ts/README.md: 704-line comprehensive guide
  - Architecture principles
  - Development workflow
  - Common patterns
  - Debugging tips
  - Appendix: Cache issue analysis + solution

### Configuration
- tsconfig.json: Strict TypeScript config
- tsconfig.test.json: Test compilation config
- package.json: Build scripts

## Key Features
- **Zod-First Design**: Schemas as single source of truth
- **Type Safety**: Strict mode, noUncheckedIndexedAccess
- **Runtime Validation**: All external data validated
- **Zero Any Types**: Complete type coverage
- **ESM Modules**: Modern JavaScript modules

## Bugs Fixed
1. Lex filter parameter order bug (holster.ts:704)
   - Fixed utils.obj.put() parameter order
   - +2 tests now passing

2. Chained listener parameter bug (holster.ts:639)
   - Changed lexFilter = undefined to null
   - +9 tests now passing

## Known Limitations
- 1 test intentionally skipped (radisk.cache edge case)
- Also skipped in original JavaScript
- Documented design trade-off: performance > edge case
- Full analysis in ts/README.md Appendix A

## Migration Path
1. Build: npm run build:ts
2. Test:

--- a/package.json
+++ b/package.json
@@ -6,7 +6,13 @@
   "main": "index.js",
   "scripts": {
     "test": "node --test",
-    "build": "esbuild src/holster.js --bundle --format=esm --sourcemap \"--external:node:*\" \"--external:ws\" --minify --outdir=build"
+    "test:ts": "node --test ts/test/**/*.test.ts",
+    "test:ts:system": "node --test ts/test/system/**/*.test.ts",
+    "build": "esbuild src/holster.js --bundle --format=esm --sourcemap \"--external:node:*\" \"--external:ws\" --minify --outdir=build",
+    "build:ts": "tsc",
+    "build:all": "npm run build:ts && npm run build",
+    "type-check": "tsc --noEmit",
+    "type-check:tests": "tsc --noEmit --project tsconfig.test.json"
   },
   "keywords": [],
   "author": "Malcolm Blaney",
@@ -14,12 +20,16 @@
   "dependencies": {
     "express": "^5.1.0",
     "fs": "^0.0.1-security",
-    "ws": "^8.18.0"
+    "ws": "^8.18.0",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
+    "@types/node": "^24.10.1",
+    "@types/ws": "^8.18.1",
     "esbuild": "0.25.3",
     "mock-socket": "^9.3.1",
-    "prettier": "^3.4.2"
+    "prettier": "^3.4.2",
+    "typescript": "^5.9.3"
   },
   "prettier": {
     "semi": false,
